objects/Dependent_Workplan_Task__c.object
<CustomObject>
    <fields>
        <fullName>Dependent_Task_Description__c</fullName>
        <formula>Dependent_Task__r.Description__c</formula>
        <label>Dependent Task - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_New_Business_Role__c</fullName>
        <formula>Dependent_Task__r.Acc_Team_Role_for_New_Business__c</formula>
        <label>Dependent Task - New Business Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_Renewal_Business_Role__c</fullName>
        <formula>Dependent_Task__r.Acc_Team_Role_for_Renewal_Business__c</formula>
        <label>Dependent Task - Renewal Business Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dependent Task</label>
        <referenceTo>Workplan_Task_Template__c</referenceTo>
        <relationshipLabel>Template Workplan Tasks Where this task is Dependent</relationshipLabel>
        <relationshipName>Dependent_Workplan_Tasks1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Task_Description__c</fullName>
        <formula>Primary_Task__r.Description__c</formula>
        <label>Primary Task - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Task_New_Business_Role__c</fullName>
        <formula>Primary_Task__r.Acc_Team_Role_for_New_Business__c</formula>
        <label>Primary Task - New Business Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Task_Renewal_Business_Role__c</fullName>
        <formula>Primary_Task__r.Acc_Team_Role_for_Renewal_Business__c</formula>
        <label>Primary Task - Renewal Business Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Task__c</fullName>
        <label>Primary Task</label>
        <referenceTo>Workplan_Task_Template__c</referenceTo>
        <relationshipLabel>Template Workplan Tasks Which are Dependent on this Task</relationshipLabel>
        <relationshipName>Dependent_Workplan_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>AIA - Custom object used to store the dependent tasks for a particular template task. For example, a particular template Workplan task can have 2 dependent tasks which need to be closed before creating it.
This object will replace the old functionality. 
This is implemented for Nov-2017 Release.</description>
    <label>Dependent Workplan Task</label>
    <nameField>
        <displayFormat>DWPT-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependent Workplan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>